# ROMA

./: .env.example  .gitignore  .gitleaksignore  BEDROCK_SETUP.md  DEPLOYMENT_STATUS.md  Dockerfile  GEMINI.md  INTEGRATION_SUMMARY.md  Makefile  PR_DESCRIPTION.md  QUICK_START.md  README.md  README_KR.md  README_ZH.md  RELEASE_NOTES_v0.2.0.md  TRAINING_READY.md  agents.md  daypilot.db  dayplan.ics  docker-compose.yaml  failed_exec  fastapi_server.py  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  quickstart.sh  sentient.yaml  setup.sh  test_predictor_type.py  test_ptc.py  test_ptc_8003.py  tui_commands
.github/: SECURITY.md
.github/workflows/: ci.yml  codeql.yml  container-scan.yml  contract-tests.yml  dependency-scan.yml  performance-tests.yml  secret-scan.yml
config/: ptc_integration.yaml
config/defaults/: config.yaml
config/profiles/: baizantium.yaml  bedrock.yaml  crypto_agent.yaml  free_tier.yaml  general.yaml  local_mac.yaml  terminal_bench_subprocess_v2.yaml  terminal_bench_subprocess_v2_codex.yaml  terminal_bench_v2.yaml  test.yaml
docker/: Dockerfile  README.md  docker-compose.yml  redis.conf
docker/e2b/: build.sh  build_dev.py  build_prod.py  mount_s3.sh  requirements.txt  start_jupyter.sh  template.py  validate_e2b_setup.py
docs/: ACE_INTEGRATION.md  ARCHITECTURE.md  COMMUNITY.md  CONFIGURATION.md  CORE_CONCEPTS.md  GETTING_STARTED.md  INTRODUCTION.md  LOCAL_QUICKSTART.md  MICRO_SAAS_GUIDE.md  OPTION_A_COMPLETE.md  OPTION_C_COMPLETE.md  PHASE1_COMPLETE_STEPS.md  PHASE1_SETUP.md  PHASE2_INTERFACE_CONTRACT.md  PHASE3_HTTP_INTEGRATION.md  PTC_INTEGRATION_COMPLETE.md  PTC_ROMA_INTEGRATION.md  PTC_SERVICE_SETUP.md  PTC_SETUP_COMPLETE.md  QUICKSTART.md  ROADMAP.md  SETUP.md  disaster-recovery.md  troubleshooting.md
docs/runbooks/: incident-response.md  rolling-restart.md
docs_kr/: QUICKSTART.md
docs_zh/: CONFIGURATION.md  DEPLOYMENT.md  E2B_SETUP.md  OBSERVABILITY.md  QUICKSTART.md  TOOLKITS.md
examples/: ai_agents_examples.py  automation_workflows.py  doc_slave_demo.py  micro_saas_examples.py  security_audit_demo.py  test_ace_integration.py  test_ptc_integration.py  vulnerable_code.py
frontend/: .env.example  TEST_CHECKLIST.md  vite.config.ts
frontend/src/: App.tsx
notebooks/: prompt_optimization.ipynb  trial_run.ipynb
performance-tests/: .dockerignore  Dockerfile  README.md  builder-benchmark.ts  builder-load-test.js  chaos-resilience.ts  docker-compose.yml
performance-tests/docs/: DOCKER.md
prompt_optimization/: README_ZH.md  __init__.py  config.py  dataset_loaders.py  judge.py  optimizer.py  solver_setup.py
prompt_optimization/experiment_cli/: run_experiment.py
prompt_optimization/metrics/: metric_with_feedback.py  search_metric.py
scripts/: evaluate_dataset.py  setup_local.sh
scripts/ptc/: ptc_env_template.txt  setup_ptc.ps1  test_daytona_sandbox.py  validate_phase1.py
src/daypilot/: __init__.py  agent.py  bot.py  calendar_sync.py  dobby_router.py  llm_parser.py  messenger.py  models.py  oauth_server.py  parser.py  reminders.py  roma_executor.py  storage.py
src/roma_dspy/: __init__.py  cli.py  logging_config.py
src/sentientresearchagent/: framework_entry.py
templates/nestjs-minimal/: package.json
templates/nextjs-minimal/: package.json
tests/: README_ZH.md  conftest.py  test_cli_integration.py  test_cli_minimal_install.py  test_config.py  test_engine.py  test_enhanced_config_validation.py  test_minimal_e2e_real_install.py  test_minimal_install.py  test_modules.py  test_package_build.py  test_parallel.py  test_sdk_usage.py  test_toolkit_injection_bugs.py
training/: 100_SCENARIOS_COMPLETE.md  ACE_TRAINING_COMPLETE_SUMMARY.md  EVALUATION_REPORT.md  OPTIMIZATION_COMPLETE_SUMMARY.md  OPTIMIZATION_IMPACT_REPORT.md  README.md  REMAINING_58_SCENARIOS.md  SAMPLE_SCENARIOS.md  SCENARIO_GENERATION_SUMMARY.md  SERVICE_ID_MAPPING.md  SETUP_COMPLETE.md  SKILLBOOK_OPTIMIZATION_REPORT.md  ace_training.py  analyze_diminishing_returns.py  convert_excel_to_scenarios.py  create_optimized_skillbook.py  evaluation_framework.py  print_excel_data.py  scenarios_100_services.yaml  scenarios_gap_filling.yaml  scenarios_optimized.yaml  scenarios_remaining_58.yaml  scenarios_template.json  scenarios_template.yaml  skillbook_optimizer.py  test_scenarios.yaml  user_scenarios.yaml
(+409 files in other folders)
