[project]
name = "roma-dspy"
version = "0.1.0"
description = "Recursive agentic problem solver"
readme = "README.md"
authors = [
    { name = "salzubi401", email = "salaheddin@sentient.xyz" },
    { name = "baran nama", email = "baran@sentient.xyz" }
]
requires-python = ">=3.12"
dependencies = [
    # Core framework dependencies only
    "dspy>=3.0.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "omegaconf>=2.3.0",
    "loguru>=0.7.3",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    # Core functionality
    "networkx>=3.0",           # DAG management
    "matplotlib>=3.6.0",       # DAG visualization
    "httpx>=0.26.0",           # LLM API calls
    "pandas>=2.0.0",           # Data handling
    "pyarrow>=14.0.0",         # Parquet storage
    "redis>=5.0.0",            # PTC cache (Phase 2)
    # MCP integration (core feature)
    "fastmcp>=2.12.4",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
# Minimal - just basics for evaluation
minimal = [
    "httpx>=0.26.0",
]

# PostgreSQL persistence
persistence = [
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",
    "greenlet>=3.2.4",
]

# MLflow observability
observability = [
    "mlflow>=3.6.0",
]

# S3 storage support
s3 = [
    "boto3>=1.40.55",
    "aiofiles>=23.2.1",
]

# E2B code execution
e2b = [
    "e2b>=2.2.0",
    "e2b-code-interpreter>=2.0.0",
]

# REST API server
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "httptools>=0.6.4",
    "uvloop>=0.21.0",
    "websockets>=15.0.1",
]

# TUI and interactive features
tui = [
    "textual>=0.60.0",
    "pyperclip>=1.8.2",
    "libtmux>=0.47.0",
]

# MCP server support (extended)
mcp = [
    "httpx-sse>=0.4.0",
    "mcp>=1.0.0",
]

# W&B integration
wandb = [
    "wandb>=0.15.0",
]

# Development tools
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-loguru>=0.4.0",
    "pytest-cov>=4.0.0",
    "ipykernel>=6.30.1",
    "ipdb>=0.13.13",
    "watchfiles>=1.1.0",
    "vulture>=2.14",
    "dockerfile-parse>=2.0.1",
    "python-magic>=0.4.27",
    "datasets>=4.2.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# Everything (for backward compatibility and production)
all = [
    "roma-dspy[minimal]",
    "roma-dspy[persistence]",
    "roma-dspy[observability]",
    "roma-dspy[s3]",
    "roma-dspy[e2b]",
    "roma-dspy[api]",
    "roma-dspy[tui]",
    "roma-dspy[mcp]",
    "roma-dspy[wandb]",
]

[project.scripts]
roma-dspy = "roma_dspy.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roma_dspy"]
only-include = [
    "src/roma_dspy",
    "prompt_optimization",
    "config"
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
    "pytest-loguru>=0.4.0",
]
